# agentic-rag

./: .gitignore  CLAUDE.md  CODEX.md  COPILOT_STUDIO_MIGRATION_GUIDE.md  SYSTEM_DOCUMENTATION.md  TESTING.md  TESTING_QUICK.md  alembic.ini  check_deployments.py  demo.py  demo_corpus.py  demo_local.py  demo_real.py  deploy-azure.ps1  main.py  pyproject.toml  requirements.txt  test_attachments.py  test_auth.py  ui.py  verify_isolation.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
app/: api.py  audit_log.py  blob_storage.py  cache.py  cases.py  chat_storage.py  chunking.py  citation_validator.py  config.py  data_lifecycle.py  db.py  enrichment.py  evaluation.py  feedback_models.py  graph.py  hallucination_guard.py  hitl.py  ingest.py  intent_router.py  job_queue.py  llm.py  logging_config.py  metrics.py  observability.py  pii_redaction.py  reranker.py  resilience.py  security.py  slo.py  state.py  vault.py
app/integrations/: __init__.py  mcp_client.py
app/mcp_ops/: __init__.py  models.py  resources.py  safety.py  server.py  tools.py
app/nodes/: generator.py  grader.py  hallucination_guard.py  retriever.py  rewriter.py  validator.py
data/chat_archive/big-thorium/: c375f3c4362a4789.json
data/demo_pst/: techcorp_investigation_2024.pst
data/purview_exchange/: email_david_williams_security.txt  email_fraud_investigation.txt  email_phishing_simulation.txt  email_sarah_data_retention.txt  email_sarah_johnson_compliance.txt
data/sample_corpus/: contract_amendment_03.docx  memo_safety_2024.txt  recruitment_india.eml  safety_incident_baytown.eml
data/test_attachments/: test_with_image.eml
eval/: big_thorium_test.jsonl  email_eval_set.jsonl
eval/gold_queries/: README.md  general_corpus.jsonl
logs/audit/: audit_20260302.jsonl  audit_20260304.jsonl  audit_20260305.jsonl
logs/audit_test/: audit_20260305.jsonl
scripts/: backup_db.py  ci_slo_gate.py  create_demo_pst.py  migrate_all.py  nightly_eval.py
tests/: conftest.py  create_sample_docs.py  test_api.py  test_cache.py  test_chunking.py  test_config_validation.py  test_db.py  test_evaluation.py  test_feedback.py  test_flagged_docs.py  test_graph.py  test_hallucination_guard.py  test_ingest_report.py  test_metrics.py  test_nodes.py  test_pst_metadata.py  test_resilience.py  test_security.py  test_state.py  verify.py
tests/load/: locustfile.py
tests/test_nodes/: test_generator.py  test_grader.py  test_retriever.py  test_rewriter.py  test_validator.py
