[project]
name = "legal-intake-validator"
version = "2.0.0"
description = "Legal Intake Validator — Agentic RAG with LangGraph for BNS/BNSS/BSA & Telangana State Laws"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-cohere>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.0.0",
    "streamlit>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
