[project]
name = "legal-intake-validator"
version = "2.0.0"
description = "Legal Intake Validator — Agentic RAG with LangGraph for BNS/BNSS/BSA & Telangana State Laws"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-cohere>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.0.0",
    "openai>=1.0.0",
    "streamlit>=1.30.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "azure-storage-blob>=12.19.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "slowapi>=0.1.9",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
formats = [
    "langchain-google-genai>=2.0.0",
    "Pillow>=11.1.0",
    "pytesseract>=0.3.10",
    "python-docx>=1.0.0",
    "extract-msg>=0.48.0",
    "reportlab>=4.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "python-pptx>=0.6.23",
    "striprtf>=0.0.26",
    "olefile>=0.47",
]
production = [
    "cohere>=5.0.0",
    "sentence-transformers>=3.0.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.8.0",
    "hvac>=2.1.0",
]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "respx>=0.21.0"]
load = ["locust>=2.0.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests (no external deps)",
    "integration: requires database or API",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
